# ray-tracer-challenge-rs

./: .gitignore  Cargo.toml  notes.txt  test.sh  test.txt
src/: basic_ray_trace.rs  camera.rs  canvas.rs  clock_face.rs  color.rs  examples.rs  intersection.rs  lib.rs  light.rs  main.rs  material.rs  objects.rs  pattern.rs  patterns.rs  ppm.rs  precompute.rs  ray.rs  transforms.rs  tuple.rs  util.rs  virtual_cannon.rs  world.rs
src/canvas/: ppm.rs
src/examples/: clock_face.rs  hexagon_scene.rs
src/objects/: cube.rs  plane.rs  sphere.rs  test_shape.rs
src/patterns/: checker.rs  gradient.rs  ring.rs  solid.rs  stripe.rs  test_pattern.rs
supply-chain/: config.toml
tests/: all.rs  canvas.rs  ch1_tests.rs  intersections.rs  lights.rs  matrices.rs  rays.rs  spheres.rs  the_rest.rs  transformations.rs  tuples.rs
tests/features/: camera.feature  intersections.feature  materials.feature  matrices.feature  patterns.feature  planes.feature  shapes.feature  spheres.feature  transformations.feature  tuples.feature  world.feature
testutils/: Cargo.toml
testutils/src/: givenwhen.rs  givenwhenthen.rs  lib.rs  parameters.rs  step.rs  then.rs  world.rs
