[package]
name = "ray-tracer-challenge-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.1"

[dev-dependencies]
cucumber = "0.20"
futures-lite = "1.13.0"

[[test]]
name = "tuples"
harness = false
