[package]
name = "ray-tracer-challenge-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
nalgebra = "0.32.3"
regex = "1.9.1"

[dev-dependencies]
cucumber = "0.20"
futures-lite = "1.13.0"

[[test]]
name = "tuples"
harness = false

[[test]]
name = "canvas"
harness = false

[[test]]
name = "matrices"
harness = false

[[test]]
name = "transformations"
harness = false
